# waclay

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  README.md  test-all.ps1  test-waclay.ps1  test-wcomp-layer.ps1  test-wit-bindgen.ps1  test_platforms.ps1
.github/workflows/: ci.yml
changelogs/: BUGFIX_OPTION_RECORD.md
crates/bindgen/: Cargo.toml
crates/bindgen/src/: config.rs  lib.rs  rust.rs  source.rs  types.rs
crates/component-macro/: Cargo.toml
crates/component-macro/src/: bindgen.rs  component.rs  lib.rs
crates/component-util/: Cargo.toml
crates/waclay/: Cargo.toml  README.md
crates/waclay/docs/: api.md  architecture.md
crates/waclay/examples/: complex_return.rs  func_param.rs  guest_resource.rs  multilevel_resource.rs  option_result.rs  record_response.rs  resource.rs  single_component.rs  string_host_guest.rs  variant_return.rs
crates/waclay/src/: abi.rs  func.rs  lib.rs  types.rs
crates/wcomp_layer/: Cargo.toml
crates/wcomp_layer/docs/: api.md
crates/wcomp_layer/examples/: guest_resource.rs  record_response.rs  variant_return.rs
crates/wcomp_layer/src/: identifier.rs  lib.rs  (+1 more)
crates/wit-bindgen-wcl/: Cargo.toml  README.md
crates/wit-bindgen-wcl/examples/calculator/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/calculator/component/src/: lib.rs
crates/wit-bindgen-wcl/examples/calculator/component/wit/: calculator.wit
crates/wit-bindgen-wcl/examples/calculator/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/calculator/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/complex_return/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/complex_return/component/src/: bindings.rs  lib.rs
crates/wit-bindgen-wcl/examples/complex_return/component/wit/: component.wit
crates/wit-bindgen-wcl/examples/complex_return/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/complex_return/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/file-manager/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/file-manager/component/src/: lib.rs
crates/wit-bindgen-wcl/examples/file-manager/component/wit/: component.wit
crates/wit-bindgen-wcl/examples/file-manager/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/file-manager/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/func_param/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/func_param/component/src/: bindings.rs  lib.rs
crates/wit-bindgen-wcl/examples/func_param/component/wit/: component.wit
crates/wit-bindgen-wcl/examples/func_param/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/func_param/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/option_result/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/option_result/component/src/: bindings.rs  lib.rs
crates/wit-bindgen-wcl/examples/option_result/component/wit/: component.wit
crates/wit-bindgen-wcl/examples/option_result/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/option_result/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/record_response/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/record_response/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/record_response/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/single_component/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/single_component/component/src/: lib.rs
crates/wit-bindgen-wcl/examples/single_component/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/single_component/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/string_host_guest/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/string_host_guest/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/string_host_guest/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/toplevel-functions/component/: Cargo.toml
crates/wit-bindgen-wcl/examples/toplevel-functions/component/src/: bindings.rs  lib.rs
crates/wit-bindgen-wcl/examples/toplevel-functions/component/wit/: component.wit
crates/wit-bindgen-wcl/examples/toplevel-functions/host/: Cargo.toml
crates/wit-bindgen-wcl/examples/toplevel-functions/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/variant_return/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/variant_return/component/wit/: component.wit
crates/wit-bindgen-wcl/examples/variant_return/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/variant_return/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/examples/web_scraper/component/: Cargo.toml  build.ps1  component.wasm
crates/wit-bindgen-wcl/examples/web_scraper/component/src/: lib.rs
crates/wit-bindgen-wcl/examples/web_scraper/component/wit/: component.wit
crates/wit-bindgen-wcl/examples/web_scraper/host/: Cargo.toml  bindings.rs
crates/wit-bindgen-wcl/examples/web_scraper/host/src/: bindings.rs  main.rs
crates/wit-bindgen-wcl/src/: codegen.rs  main.rs
docs/: BINDGEN.md  BINDGEN_STATUS.md  bindgen.md  usage.md
examples/: bindgen_calculator.rs  bindgen_example_host.rs  bindgen_host.rs  complex_return.rs  guest_resource.rs  record_response.rs  string_host_guest.rs  variant_return.rs
examples/complex_return/: Cargo.toml  build.sh
examples/func_param/: Cargo.toml
examples/guest_resource/: Cargo.toml  build.sh  component.wasm
examples/multilevel_resource/: build.sh
examples/option_result/: build.sh
examples/record_response/: build.ps1  build.sh  component.wasm
examples/resource/: build.sh
examples/string_host_guest/: Cargo.toml  build.ps1  build.sh
examples/variant_return/: Cargo.toml  build.ps1
src/: abi.rs  func.rs  lib.rs  types.rs  values.rs
tests/: bindgen_integration.rs  bindgen_simple.rs  bindgen_test.rs
(+26 files in other folders)
