[workspace]
members = [
    "crates/wcomp_layer",
    "crates/wit-bindgen-wcl",
]
exclude = [
    "crates/wit-bindgen-wcl/examples/*/host",
    "crates/wit-bindgen-wcl/examples/*/component",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_component_layer"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"