[workspace]
members = [
    "crates/waclay",
    "crates/wit-bindgen-wcl",
]
exclude = [
    "crates/waclay/examples/*",
    "crates/wit-bindgen-wcl/examples/*/host",
    "crates/wit-bindgen-wcl/examples/*/component",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HemantKArya/waclay"
description = "Runtime-agnostic WebAssembly Component Model implementation"
homepage = "https://github.com/HemantKArya/waclay"
readme = "README.md"
keywords = ["wasm", "webassembly", "component-model", "wit", "runtime-agnostic"]
categories = ["wasm", "api-bindings", "development-tools"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"