[package]
name = "wasm_component_layer_macro"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Procedural macros for wasm_component_layer"
repository = "https://github.com/HemantKArya/wcomp_layer"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
anyhow = "1.0"
wasm_component_layer_bindgen = { path = "../bindgen" }
wit-parser = "0.239.0"
