[package]
name = "single_component_host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "single_component_host"
path = "src/main.rs"

[dependencies]
waclay = { path = "../../../../waclay" }
wasm_runtime_layer = "0.6"
wasmi_runtime_layer = "0.51"
anyhow = "1.0"

[workspace]
# This example is not part of the workspace
